--- a/res/layout/question_type_1.xml
+++ b/res/layout/question_type_1.xml
@@ -3,9 +3,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
+    <ImageView 
+        android:id="@+id/imageQ"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/a"/>
     
 	<GridView
-	    android:id="@+id/gridview"
+	    android:id="@+id/gridText"
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
 	    android:columnWidth="100dp"
