--- a/res/layout/question_type_2.xml
+++ b/res/layout/question_type_2.xml
@@ -4,5 +4,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-
+    <TextView 
+        android:id="@+id/textQ"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+     />
+    
+	<GridView
+	    android:id="@+id/gridImage"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:columnWidth="100dp"
+	    android:numColumns="2"
+	    android:verticalSpacing="10dp"
+	    android:horizontalSpacing="10dp"
+	    android:stretchMode="columnWidth"
+	    android:gravity="center"
+	/>
 </LinearLayout>
