--- a/res/layout/question_type_1.xml
+++ b/res/layout/question_type_1.xml
@@ -1,8 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
+    android:orientation="vertical">    
     <ImageView 
         android:id="@+id/imageQ"
         android:layout_width="wrap_content"
@@ -23,6 +22,6 @@
 	<LinearLayout
 	android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:id = "@+id/quest_layout" ></LinearLayout>
 </LinearLayout>
