--- a/res/layout/question_type_2.xml
+++ b/res/layout/question_type_2.xml
@@ -24,6 +24,6 @@
 	<LinearLayout
 	android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:id = "@+id/quest_layout" ></LinearLayout>
 </LinearLayout>
