--- a/res/layout/stadistics_lesson.xml
+++ b/res/layout/stadistics_lesson.xml
@@ -7,7 +7,7 @@
     <ImageView
         android:id="@+id/backStats"
         android:layout_width="match_parent"
-        android:layout_height="200dip"
+        android:layout_height="180dip"
         android:src="@drawable/stadistics" />
 
     <TextView
@@ -19,68 +19,76 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="horizontal" >
 
         <ImageView
             android:id="@+id/resultsRating"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_action_half_important" />
+            android:src="@drawable/ic_action_half_important"
+            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/textResultsRating"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_weight="3" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="horizontal" >
 
         <ImageView
             android:id="@+id/resultsGood"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_action_good" />
+            android:src="@drawable/ic_action_good"
+            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/textResultsGood"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_weight="3" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="horizontal" >
 
         <ImageView
             android:id="@+id/resultsBad"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_action_bad" />
+            android:src="@drawable/ic_action_bad"
+            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/textResultsBad"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_weight="3" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="horizontal" >
         
         <Button android:id="@+id/home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/home"/>
+            android:text="@string/home"
+            android:layout_weight="1"/>
 
         <Button android:id="@+id/repeat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/repeat"/>
+            android:text="@string/repeat"
+            android:layout_weight="1"/>
     </LinearLayout>
    
 
