--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -4,9 +4,9 @@
     tools:context="com.example.japones.MainActivity" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_stats"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/stats"
         app:showAsAction="never"/>
 
 </menu>
